--- a/SignalRAssignment/SignalRAssignment.csproj
+++ b/SignalRAssignment/SignalRAssignment.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repository\Repository.csproj" />
+    <ProjectReference Include="..\Repository\DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
